Made register endpoint
