# internal/models/dtos/register_dtos.go
@@ -1,0 +1,6 @@
+package dtos
+
+type RegisterRequest struct {
+	PhoneNumber string `json:"phone_number"`
+	Role        string `json:"role"`
+}
